[FIX] horizontal scrollbar appears while scrolling
[FIX] don't show playIndicator on giphy elements while its loading

--- a/client/src/routes/gallery/gallery.module.css
+++ b/client/src/routes/gallery/gallery.module.css
@@ -10,6 +10,11 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    overflow: hidden;
+    position: relative;
+    left: 0px;
+    right: 0px;
+    margin: 0px 10px;
 }
 
 .galleryItem {
